# osge

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/engine/: GameEngine.cpp  GameEngine.h
src/engine/timing/: FrameTimer.cpp  FrameTimer.h
src/entities/: Entity.cpp  Entity.h
src/entities/units/: BaseUnit.cpp  BaseUnit.h
src/render/: RenderEngine.cpp  RenderEngine.h  Surface.cpp  Surface.h
src/render/primitives/: Primitive.cpp  Primitive.h  Triangle.cpp  Triangle.h
